# MLOps

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: base.yaml
scripts/: train.py
src/ml_engineering/: utils.py
tests/: __init__.py  test_utils.py
